--- a/App/MyMoneyTracker/app/src/main/AndroidManifest.xml
+++ b/App/MyMoneyTracker/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.MyMoneyTracker"
         tools:targetApi="31">
         <activity
+            android:name=".AllTransactionsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ViewTransactionActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddCategoryActivity"
             android:exported="false" />
         <activity
