Internet Data Download (Currency Rates) added

--- a/App/MyMoneyTracker/app/src/main/AndroidManifest.xml
+++ b/App/MyMoneyTracker/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".MyMoneyTrackerApp"
         android:allowBackup="true"
@@ -14,6 +16,9 @@
         tools:targetApi="31">
         <activity
             android:name=".AllTransactionsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CurrencyRatesActivity"
             android:exported="false" />
         <activity
             android:name=".ViewTransactionActivity"
