--- a/App/MyMoneyTracker/app/src/main/AndroidManifest.xml
+++ b/App/MyMoneyTracker/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
         android:theme="@style/Theme.MyMoneyTracker"
         tools:targetApi="31">
         <activity
+            android:name=".SettingsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_settings" />
+        <activity
             android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
@@ -30,6 +34,7 @@
             android:name=".NotificationService"
             android:enabled="true"
             android:exported="false" />
+
         <activity
             android:name=".AllTransactionsActivity"
             android:exported="false" />
@@ -53,7 +58,7 @@
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
